--- a/BlockVilla/contact.html
+++ b/BlockVilla/contact.html
@@ -31,7 +31,7 @@
 
   <div class="click-closed"></div>
   <!--/ Form Search Star /-->
-  <!-- <div class="box-collapse">
+  <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -120,7 +120,7 @@
         </div>
       </form>
     </div>
-  </div> -->
+  </div>
   <!--/ Form Search End /-->
 
   <!--/ Nav Star /-->
@@ -148,7 +148,7 @@
           <li class="nav-item">
             <a class="nav-link" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
           </li>
           <li class="nav-item dropdown">
@@ -162,12 +162,18 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link active" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
+      <button type="button" class="btn btn-b-n d-none d-md-block mr-1" >
+        <a href="login.html" class="text-white">Login</a>
+      </button>
+      <button type="button" class="btn btn-b-n d-none d-md-block mr-1">
+        <a href="reg.html" class="text-white">Sign Up</a>
+      </button>
       <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -347,16 +353,15 @@
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
+                BlockVilla is a real estate decentralized smart contract app that connects buyers or renters to properties on sale or rent. It doesn’t need a third party/agent to complete a transaction, a transaction can be fully done on the app with the use of local currency or cryptocurrency.
               </p>
             </div>
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
+                  <span class="color-text-a">Phone .</span> +234 700 blockVilla<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+254 700 BlockVilla</li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
+                  <span class="color-text-a">Email .</span> support@blockvilla.com</li>
               </ul>
             </div>
           </div>
@@ -400,7 +405,10 @@
             <div class="w-body-a">
               <ul class="list-unstyled">
                 <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Venezuela</a>
+                  <i class="fa fa-angle-right"></i> <a href="#">Nigeria</a>
+                </li>
+                <li class="item-list-a">
+                  <i class="fa fa-angle-right"></i> <a href="#">Kenya</a>
                 </li>
                 <li class="item-list-a">
                   <i class="fa fa-angle-right"></i> <a href="#">China</a>
