--- a/BlockVilla/index.html
+++ b/BlockVilla/index.html
@@ -31,7 +31,7 @@
 
   <div class="click-closed"></div>
   <!--/ Form Search Star /-->
-  <!-- <div class="box-collapse">
+  <div class="box-collapse">
     <div class="title-box-d">
       <h3 class="title-d">Search Property</h3>
     </div>
@@ -120,7 +120,7 @@
         </div>
       </form>
     </div>
-  </div> -->
+  </div>
   <!--/ Form Search End /-->
 
   <!--/ Nav Star /-->
@@ -148,7 +148,7 @@
           <li class="nav-item">
             <a class="nav-link" href="property-grid.html">Property</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="blog-grid.html">Blog</a>
           </li>
           <li class="nav-item dropdown">
@@ -162,12 +162,18 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
+      <button type="button" class="btn btn-b-n d-none d-md-block mr-1" >
+        <a href="login.html" class="text-white">Login</a>
+      </button>
+      <button type="button" class="btn btn-b-n d-none d-md-block mr-1">
+        <a href="reg.html" class="text-white">Sign Up</a>
+      </button>
       <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
@@ -272,14 +278,12 @@
                 <span class="fa fa-gamepad"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Lifestyle</h2>
+                <h2 class="title-c">Invest</h2>
               </div>
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                convallis a pellentesque
-                nec, egestas non nisi.
+                We provide a platform where anybody anywhere can become an investor with the little amount you have. We offer this through tokenization of properties, Come and invest with us today.
               </p>
             </div>
             <div class="card-footer-c">
@@ -296,14 +300,12 @@
                 <span class="fa fa-usd"></span>
               </div>
               <div class="card-title-c align-self-center">
-                <h2 class="title-c">Loans</h2>
+                <h2 class="title-c">Rent</h2>
               </div>
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Nulla porttitor accumsan tincidunt. Curabitur aliquet quam id dui posuere blandit. Mauris blandit
-                aliquet elit, eget tincidunt
-                nibh pulvinar a.
+                Not ready to be land owner, no worries, we offer different varieties of properties for rent, big or small, whichever way you love it, we are ready to serve you the best.
               </p>
             </div>
             <div class="card-footer-c">
@@ -325,9 +327,7 @@
             </div>
             <div class="card-body-c">
               <p class="content-c">
-                Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                convallis a pellentesque
-                nec, egestas non nisi.
+                Ready to own a property? You are at the right place, we offer a transparent and secure mode of buying properties with no unnecessary huge agent amount, we give you the best at a very good rate.
               </p>
             </div>
             <div class="card-footer-c">
@@ -359,7 +359,7 @@
           </div>
         </div>
       </div>
-      <div id="property-carousel" class="owl-carousel owl-theme">
+      <div id="property-carousel" class="owl-carousel owl-theme" >
         <div class="carousel-item-b">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
@@ -554,7 +554,7 @@
   <!--/ Property End /-->
 
   <!--/ Agents Star /-->
-  <section class="section-agents section-t8">
+  <!-- <section class="section-agents section-t8">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -750,7 +750,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Agents End /-->
 
   <!--/ News Star /-->
@@ -783,7 +783,7 @@
                 </div>
                 <div class="card-title-b">
                   <h2 class="title-2">
-                    <a href="blog-single.html">House is comming
+                    <a href="blog-single.html">House is coming
                       <br> new</a>
                   </h2>
                 </div>
@@ -895,9 +895,7 @@
                 </div>
                 <div class="testimonials-content">
                   <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, cupiditate ea nam praesentium
-                    debitis hic ber quibusdam
-                    voluptatibus officia expedita corpori.
+                    If you need a Home and not just a house, BlockVilla will provide that for you at a very affordable price, they are the best.
                   </p>
                 </div>
                 <div class="testimonial-author-box">
@@ -922,9 +920,7 @@
                 </div>
                 <div class="testimonials-content">
                   <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, cupiditate ea nam praesentium
-                    debitis hic ber quibusdam
-                    voluptatibus officia expedita corpori.
+                    BlockVilla has a good and dedicated team, when it comes to property, they give you quality over quantity.
                   </p>
                 </div>
                 <div class="testimonial-author-box">
@@ -951,16 +947,15 @@
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
-                Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat duis
-                sed aute irure.
+                BlockVilla is a real estate decentralized smart contract app that connects buyers or renters to properties on sale or rent. It doesn’t need a third party/agent to complete a transaction, a transaction can be fully done on the app with the use of local currency or cryptocurrency.
               </p>
             </div>
             <div class="w-footer-a">
               <ul class="list-unstyled">
                 <li class="color-a">
-                  <span class="color-text-a">Phone .</span> contact@example.com</li>
+                  <span class="color-text-a">Phone .</span> +234 700 blockVilla<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+254 700 BlockVilla</li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> +54 356 945234</li>
+                  <span class="color-text-a">Email .</span> support@blockvilla.com</li>
               </ul>
             </div>
           </div>
@@ -978,9 +973,6 @@
                   </li>
                   <li class="item-list-a">
                     <i class="fa fa-angle-right"></i> <a href="#">Legal</a>
-                  </li>
-                  <li class="item-list-a">
-                    <i class="fa fa-angle-right"></i> <a href="#">Agent Admin</a>
                   </li>
                   <li class="item-list-a">
                     <i class="fa fa-angle-right"></i> <a href="#">Careers</a>
@@ -1004,7 +996,10 @@
             <div class="w-body-a">
               <ul class="list-unstyled">
                 <li class="item-list-a">
-                  <i class="fa fa-angle-right"></i> <a href="#">Venezuela</a>
+                  <i class="fa fa-angle-right"></i> <a href="#">Nigeria</a>
+                </li>
+                <li class="item-list-a">
+                  <i class="fa fa-angle-right"></i> <a href="#">Kenya</a>
                 </li>
                 <li class="item-list-a">
                   <i class="fa fa-angle-right"></i> <a href="#">China</a>
