--- a/BlockVilla/contact.html
+++ b/BlockVilla/contact.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/screenshot_20201111-173542_2.png" rel="icon">
+  <link href="img/screenshot_20201111-173542_2.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -61,10 +61,10 @@
               <label for="city">City</label>
               <select class="form-control form-control-lg form-control-a" id="city">
                 <option>All City</option>
-                <option>Alabama</option>
-                <option>Arizona</option>
-                <option>California</option>
-                <option>Colorado</option>
+                <option>Lagos</option>
+                <option>Uganda</option>
+                <option>Abuja</option>
+                <option>Portharcourt</option>
               </select>
             </div>
           </div>
@@ -189,7 +189,7 @@
         <div class="col-md-12 col-lg-8">
           <div class="title-single-box">
             <h1 class="title-single">Contact US</h1>
-            <span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.</span>
+            <span class="color-text-a">Your Feedback is Appreciated.</span>
           </div>
         </div>
         <div class="col-md-12 col-lg-4">
@@ -269,10 +269,10 @@
                   </div>
                   <div class="icon-box-content">
                     <p class="mb-1">Email.
-                      <span class="color-a">contact@example.com</span>
+                      <span class="color-a">support@blockvilla.com</span>
                     </p>
                     <p class="mb-1">Phone.
-                      <span class="color-a">+54 356 945234</span>
+                      <span class="color-a">+234 7000000000</span>
                     </p>
                   </div>
                 </div>
@@ -287,8 +287,8 @@
                   </div>
                   <div class="icon-box-content">
                     <p class="mb-1">
-                      Manhattan, Nueva York 10036,
-                      <br> EE. UU.
+                      Everywhere,
+                      <br> Anytime.
                     </p>
                   </div>
                 </div>
