--- a/BlockVilla/reg.html
+++ b/BlockVilla/reg.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="img/screenshot_20201111-173542_2.png" rel="icon">
+  <link href="img/screenshot_20201111-173542_2.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -61,10 +61,10 @@
               <label for="city">City</label>
               <select class="form-control form-control-lg form-control-a" id="city">
                 <option>All City</option>
-                <option>Alabama</option>
-                <option>Arizona</option>
-                <option>California</option>
-                <option>Colorado</option>
+                <option>Lagos</option>
+                <option>Uganda</option>
+                <option>Abuja</option>
+                <option>Portharcourt</option>
               </select>
             </div>
           </div>
