--- a/BlockVilla/about.html
+++ b/BlockVilla/about.html
@@ -457,13 +457,13 @@
               </div>
               <div class="card-body-d">
                 <p class="content-d color-text-a">
-                  Frontend Developer
+                  Frontend Developer and Data Scientist
                 </p>
                 <div class="info-agents color-a">
                   <p>
-                    <strong>Phone: </strong> +234</p>
+                    <strong>Phone: </strong> +234 81 04051726</p>
                   <p>
-                    <strong>Email: </strong> femi@blockvilla.com</p>
+                    <strong>Email: </strong> oluwafemiogedengbe@gmail.com</p>
                 </div>
               </div>
               <div class="card-footer-d">
