--- a/BlockVilla/dashboard.html
+++ b/BlockVilla/dashboard.html
@@ -296,8 +296,8 @@
                       <div class="panel-heading">
                         <h3 class="panel-title">Step 2</h3>
                       </div>
-                      <label for="exampleFormControlFile1">Property Images</label>
-                      <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                      <label for="exampleFormControlFile1">Property Images (minimum of 3 images) </label>
+                      <input type="file" class="form-control-file" id="exampleFormControlFile1" multiple>
                       <!-- <label>Number of Bath</label> -->
                       <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                         <option selected>Number of Bath</option>
