--- a/BlockVilla/index.html
+++ b/BlockVilla/index.html
@@ -25,6 +25,8 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <script type=text/javascript src="./js/bundle.js"></script>
+  <script type=text/javascript src="./js/web3.js"></script>
 </head>
 
 <body>
