--- a/BlockVilla/index.html
+++ b/BlockVilla/index.html
@@ -27,6 +27,7 @@
   <link href="css/style.css" rel="stylesheet">
   <script type=text/javascript src="./js/bundle.js"></script>
   <script type=text/javascript src="./js/web3.js"></script>
+  <script type=text/javascript src="./js/metamask.js"></script>
 </head>
 
 <body>
