--- a/BlockVilla/reg.html
+++ b/BlockVilla/reg.html
@@ -224,7 +224,9 @@
         <div class="col-sm-12 section-t8">
           <div class="row">
             <div class="col-md-7">
-              <form class="form-a contactForm" action="" method="post" role="form">
+              <button class="btn btn-a" id="connector">Connect Wallet</button>
+
+              <form class="form-a" role="form" id="userform">
                 <div id="sendmessage">Registration Successful</div>
                 <div id="errormessage"></div>
                 <div class="row">
@@ -236,19 +238,25 @@
                   </div> -->
                   <div class="col-md-12 mb-3">
                     <div class="form-group">
-                      <input name="fname" type="text" class="form-control form-control-lg form-control-a" placeholder="Full Name">
+                      <input name="address" type="text" class="form-control form-control-lg form-control-a" placeholder="Wallet Address" id="walletaddress" disabled>
                       <div class="validation"></div>
                     </div>
                   </div>
                   <div class="col-md-12 mb-3">
                     <div class="form-group">
-                      <input name="email" type="email" class="form-control form-control-lg form-control-a" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+                      <input name="fname" id="name" type="text" class="form-control form-control-lg form-control-a" placeholder="Full Name">
                       <div class="validation"></div>
                     </div>
                   </div>
                   <div class="col-md-12 mb-3">
                     <div class="form-group">
-                      <input type="password" name="password" class="form-control form-control-lg form-control-a" placeholder="Password">
+                      <input name="workaddress" id="workaddress" type="text" class="form-control form-control-lg form-control-a" placeholder="Your Work Address" data-rule="email" data-msg="Work Address">
+                      <div class="validation"></div>
+                    </div>
+                  </div>
+                  <div class="col-md-12 mb-3">
+                    <div class="form-group">
+                      <input type="password" id="password" name="password" class="form-control form-control-lg form-control-a" placeholder="Password">
                       <div class="validation"></div>
                     </div>
                   </div>
@@ -259,7 +267,7 @@
                     </div>
                   </div>
                   <div class="col-md-12">
-                    <button type="submit" class="btn btn-a">Create</button>
+                    <button type="submit" class="btn btn-a" >Create</button>
                   </div>
                 </div>
               </form>
@@ -445,6 +453,9 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+  <script src="js/web3.js"></script>
+  <script src="js/metamask.js"></script>
+  <script src="js/register.js"></script>
 
 </body>
 </html>
